# cpp_mongodb

./: CMakeLists.txt  main.cpp
